--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
 * {
     box-sizing: border-box;
 }
-html{
+.background{
    
-   background-image: linear-gradient(to bottom right, orange, steelblue);
+   background-image: linear-gradient(to bottom right, rgb(252, 173, 77), rgb(255, 209, 124));
 }
 /* For mobile phones: */
 [class*="col-"] {
@@ -56,7 +56,7 @@ img {
     max-width: 102%;
     height:auto;
 }
-#portfolioArtif{
+.portfolioArtif{
     background-color: steelblue;
     margin: 20px auto;
     padding: 10px;
@@ -64,15 +64,17 @@ img {
     box-shadow: 10px 10px 10px #333;
     
 }
-#portfolioArtif h2{
+.portfolioArtif h2{
     color:aliceblue;
+    text-align: center;
 }
 h1{
     text-align: center;
     font-size:3rem;
-    color:aliceblue;
+    color:steelblue;
 }
 #navigation a{
+    text-decoration:none;
     background-color: steelblue;
     margin: 20px auto;
     padding: 10px;
@@ -80,4 +82,15 @@ h1{
     border-radius: 20px;
     box-shadow: 10px 10px 10px #333;
     text-align: center;
+    color:aliceblue;
+}
+#navigation a:hover{
+    background-color: orange;
+}
+.subtitle{
+    color:orange;
+}
+#contact{
+    text-align: center;
+    color: steelblue;
 }
