--- a/style.css
+++ b/style.css
@@ -73,6 +73,15 @@ h1{
     font-size:3rem;
     color:steelblue;
 }
+h2{
+    text-align: center;
+    color: aliceblue;
+}
+#biograph p{
+    text-align: center;
+}
+   
+
 #navigation a{
     text-decoration:none;
     background-color: steelblue;
