--- a/style.css
+++ b/style.css
@@ -94,3 +94,7 @@ h1{
     text-align: center;
     color: steelblue;
 }
+
+body{
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
