--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ img {
     padding: 10px;
     border-radius: 20px;
     box-shadow: 10px 10px 10px #333;
-    
+    color:aliceblue;
 }
 .portfolioArtif h2{
     color:aliceblue;
@@ -93,4 +93,8 @@ h1{
 #contact{
     text-align: center;
     color: steelblue;
+}
+#biograph{
+color:aliceblue;
+
 }
